@@ -1,4 +1,7 @@
-2004-04-23  Markus Germeier  <mager@tzi.de>
+2004-04-24  Markus Germeier  <mager@tzi.de>
+	* further open/close fixes
+	
+2004-04-23  Markus Germeier  <mager@tzi.de>	
 	* libmpio/src/mpio.c (mpio_close): 
 	  - fixed a stupid bug while closing the device
 	* don't dump core if internal memory is not available
